[gd_scene load_steps=8 format=3 uid="uid://ck80um47updrh"]

[ext_resource type="Script" path="res://scenes/enemy/item.gd" id="1_tbxip"]
[ext_resource type="Script" path="res://scenes/item_info.gd" id="2_wa5fm"]
[ext_resource type="Texture2D" uid="uid://b8cnobvecp7sp" path="res://assets/effect/light.png" id="3_ehur1"]
[ext_resource type="Texture2D" uid="uid://bith5wpuhcm3u" path="res://assets/item/consumable/health_potion.png" id="3_j0vt1"]
[ext_resource type="Script" path="res://scenes/item_interaction_area.gd" id="3_vf61j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x2hk8"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w2r2v"]
radius = 16.0

[node name="Item" type="RigidBody2D"]
collision_layer = 16
script = ExtResource("1_tbxip")

[node name="ItemInfo" type="Node2D" parent="."]
script = ExtResource("2_wa5fm")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x2hk8")

[node name="ItemTexture" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_j0vt1")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_vf61j")

[node name="Collision" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0.5, 0)
shape = SubResource("CircleShape2D_w2r2v")

[node name="ItemNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ItemLight" type="PointLight2D" parent="."]
scale = Vector2(0.3, 0.3)
color = Color(1.5, 0, 0, 0.579)
texture = ExtResource("3_ehur1")
texture_scale = 0.2

[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="on_body_exited"]
[connection signal="screen_exited" from="ItemNotifier" to="." method="on_screen_exited"]
